# Multi-document-RAG-app

./: .gitignore  1-densesparse.ipynb  Best.md  Dockerfile  PineconeVectorDB.ipynb  README.md  UsershpAppDataLocalTemptmp0j8qy92ppdf.json  UsershpAppDataLocalTemptmp1brm2f41pdf.json  UsershpAppDataLocalTemptmp8ec8rk3gpdf.json  UsershpAppDataLocalTemptmpakg__6g_pdf.json  UsershpAppDataLocalTemptmpaoc2ll4updf.json  UsershpAppDataLocalTemptmphqtj46fhpdf.json  UsershpAppDataLocalTemptmpobgmst07pdf.json  UsershpAppDataLocalTemptmppsto5yvnpdf.json  UsershpAppDataLocalTemptmpza9a0n4ipdf.json  codeBajaj HackRxRag_appappuploadspolicypdf.json  experiments.ipynb  main.py  progress.md  pyproject.toml  requirements.txt  steps.md  streamlit_app.py  test_query.py
app/api/: app.py
app/api/v1/: routes.py
app/config/: config.py  config.yaml
app/core/: session_manager.py
app/data/: appuploadsHDFC-Life-Click-2-Wealth-101L133V03-Policy-Document-1-10pdf.json  appuploadspolicy-1-5pdf.json  appuploadspolicypdf.json
app/database/: database.py  sessions.db
app/embedding/: embeder.py  vectore_store.py
app/ingestion/: file_loader.py  text_splitter.py
app/metadata_extraction/: metadata_ext.py
app/prompts/: prompts.py
app/reseasoning/: descision_maker.py  query_parser.py
app/retrieval/: __init__.py  retriever.py
app/schemas/: metadata_schema.py  request_models.py  response_models.py
app/services/: RAG_service.py
app/uploads/: hhh.docx
app/utils/: config_loader.py  document_op.py  metadata_utils.py  model_loader.py
